--- a/reference/llm_translate.qmd
+++ b/reference/llm_translate.qmd
@@ -7,7 +7,7 @@ execute:
 
 ```{r}
 #| include: false
-source("../utils/knitr-print.R")
+source("../site/knitr-print.R")
 ```
 
 [R/llm-translate.R](https://github.com/mlverse/mall/blob/main/R/llm-translate.R)
