--- a/reference/m_backend_submit.qmd
+++ b/reference/m_backend_submit.qmd
@@ -7,7 +7,7 @@ execute:
 
 ```{r}
 #| include: false
-source("../utils/knitr-print.R")
+source("../site/knitr-print.R")
 ```
 
 [R/m-backend-prompt.R, R/m-backend-submit.R](https://github.com/mlverse/mall/blob/main/R/m-backend-prompt.R, R/m-backend-submit.R)
