--- a/reference/reviews.qmd
+++ b/reference/reviews.qmd
@@ -7,7 +7,7 @@ execute:
 
 ```{r}
 #| include: false
-source("../utils/knitr-print.R")
+source("../site/knitr-print.R")
 ```
 
 [R/data-reviews.R](https://github.com/mlverse/mall/blob/main/R/data-reviews.R)
