Updates documentation (courtesy of pkgsite), runs code to get frozen output

--- a/reference/r_index.qmd
+++ b/reference/r_index.qmd
@@ -38,6 +38,11 @@ toc: false
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Specify the model to use
 
+[llm_verify()](llm_verify.html) [llm_vec_verify()](llm_verify.html)
+
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Verify if a statement about the text is true or not
+
 [reviews](reviews.html)
 
 
