--- a/index.qmd
+++ b/index.qmd
@@ -44,6 +44,7 @@ Currently, the included prompts perform the following:
 - [Classify text](#classify)
 - [Extract one, or several](#extract), specific pieces information from the text
 - [Translate text](#translate)
+- [Verify that something it true](#verify) about the text (binary)
 - [Custom prompt](#custom-prompt)
 
 This package is inspired by the SQL AI functions now offered by vendors such as
@@ -297,6 +298,63 @@ For more information and examples visit this function's
 [Python reference page](reference/MallFrame.qmd#mall.MallFrame.extract) 
 
 :::
+
+### Classify
+
+Use the LLM to categorize the text into one of the options you provide: 
+
+
+::: {.panel-tabset group="language"}
+## R
+
+```{r}
+reviews |>
+  llm_classify(review, c("appliance", "computer"))
+```
+
+For more information and examples visit this function's 
+[R reference page](reference/llm_classify.qmd) 
+
+## Python 
+
+```{python}
+reviews.llm.classify("review", ["computer", "appliance"])
+```
+
+For more information and examples visit this function's 
+[Python reference page](reference/MallFrame.qmd#mall.MallFrame.classify) 
+
+:::
+
+### Verify 
+
+This functions allows you to check and see if a statement is true, based
+on the provided text. By default, it will return a 1 for "yes", and 0 for
+"no". This can be customized.
+
+
+::: {.panel-tabset group="language"}
+## R
+
+```{r}
+reviews |>
+  llm_verify(review, "is the customer happy with the purchase")
+```
+
+For more information and examples visit this function's 
+[R reference page](reference/llm_verify.qmd) 
+
+## Python 
+
+```{python}
+reviews.llm.verify("review", "is the customer happy with the purchase")
+```
+
+For more information and examples visit this function's 
+[Python reference page](reference/MallFrame.qmd#mall.MallFrame.verify) 
+
+:::
+
 
 
 ### Translate
