--- a/index.qmd
+++ b/index.qmd
@@ -32,6 +32,7 @@ mall::llm_use("ollama", "llama3.2", seed = 100, .cache = "_readme_cache")
 <!-- badges: end -->
 
 
+
 Run multiple LLM predictions against a data frame. The predictions are processed 
 row-wise over a specified column. It works using a pre-determined one-shot prompt,
 along with the current row's content. `mall` has been implemented for both R
@@ -44,6 +45,7 @@ Currently, the included prompts perform the following:
 - [Classify text](#classify)
 - [Extract one, or several](#extract), specific pieces information from the text
 - [Translate text](#translate)
+- [Verify that something it true](#verify) about the text (binary)
 - [Custom prompt](#custom-prompt)
 
 This package is inspired by the SQL AI functions now offered by vendors such as
@@ -298,6 +300,63 @@ For more information and examples visit this function's
 
 :::
 
+### Classify
+
+Use the LLM to categorize the text into one of the options you provide: 
+
+
+::: {.panel-tabset group="language"}
+## R
+
+```{r}
+reviews |>
+  llm_classify(review, c("appliance", "computer"))
+```
+
+For more information and examples visit this function's 
+[R reference page](reference/llm_classify.qmd) 
+
+## Python 
+
+```{python}
+reviews.llm.classify("review", ["computer", "appliance"])
+```
+
+For more information and examples visit this function's 
+[Python reference page](reference/MallFrame.qmd#mall.MallFrame.classify) 
+
+:::
+
+### Verify 
+
+This functions allows you to check and see if a statement is true, based
+on the provided text. By default, it will return a 1 for "yes", and 0 for
+"no". This can be customized.
+
+
+::: {.panel-tabset group="language"}
+## R
+
+```{r}
+reviews |>
+  llm_verify(review, "is the customer happy with the purchase")
+```
+
+For more information and examples visit this function's 
+[R reference page](reference/llm_verify.qmd) 
+
+## Python 
+
+```{python}
+reviews.llm.verify("review", "is the customer happy with the purchase")
+```
+
+For more information and examples visit this function's 
+[Python reference page](reference/MallFrame.qmd#mall.MallFrame.verify) 
+
+:::
+
+
 
 ### Translate
 
@@ -486,4 +545,3 @@ llm_vec_sentiment("I am happy")
 ```{r}
 llm_vec_translate("Este es el mejor dia!", "english")
 ```
-
