--- a/reference/llm_use.qmd
+++ b/reference/llm_use.qmd
@@ -10,7 +10,7 @@ execute:
 source("../site/knitr-print.R")
 ```
 
-[R/llm-use.R](https://github.com/mlverse/mall/blob/main/R/llm-use.R)
+[R/llm-use.R](https://github.com/mlverse/mall/blob/main/r/R/llm-use.R)
 
 ## llm_use
 
@@ -38,7 +38,7 @@ llm_use(
 | model | The name of model supported by the back-end provider |
 | ... | Additional arguments that this function will pass down to the integrating function. In the case of Ollama, it will pass those arguments to `ollamar::chat()`. |
 | .silent | Avoids console output |
-| .cache | The path to save model results, so they can be re-used if the same operation is ran again. To turn off, set this argument to an empty character: `""`. 'It defaults to '_mall_cache'. If this argument is left `NULL` when calling this function, no changes to the path will be made. |
+| .cache | The path to save model results, so they can be re-used if the same operation is ran again. To turn off, set this argument to an empty character: `""`. It defaults to a temp folder. If this argument is left `NULL` when calling this function, no changes to the path will be made. |
 | .force | Flag that tell the function to reset all of the settings in the R session |
 
 
@@ -49,6 +49,7 @@ llm_use(
 
 ## Examples
 ```{r}
+ 
  
 library(mall) 
  
