--- a/reference/llm_use.qmd
+++ b/reference/llm_use.qmd
@@ -15,26 +15,26 @@ source("../site/knitr-print.R")
 ## llm_use
 
 ## Description
- Allows us to specify the back-end provider, model to use during the current R session 
+Allows us to specify the back-end provider, model to use during the current R session
 
 
 ## Usage
 ```r
- 
-llm_use( 
-  backend = NULL, 
-  model = NULL, 
-  ..., 
-  .silent = FALSE, 
-  .cache = NULL, 
-  .force = FALSE 
-) 
+
+llm_use(
+  backend = NULL,
+  model = NULL,
+  ...,
+  .silent = FALSE,
+  .cache = NULL,
+  .force = FALSE
+)
 ```
 
 ## Arguments
 |Arguments|Description|
 |---|---|
-| backend | The name of an supported back-end provider. Currently only 'ollama' is supported. |
+| backend | "ollama" or an `ellmer` `Chat` object. If using "ollama", `mall` will use is out-of-the-box integration with that back-end. Defaults to "ollama". |
 | model | The name of model supported by the back-end provider |
 | ... | Additional arguments that this function will pass down to the integrating function. In the case of Ollama, it will pass those arguments to `ollamar::chat()`. |
 | .silent | Avoids console output |
@@ -44,35 +44,42 @@ llm_use(
 
 
 ## Value
- A `mall_session` object 
+A `mall_session` object
 
 
 ## Examples
 ```{r}
- 
- 
-library(mall) 
- 
-llm_use("ollama", "llama3.2") 
- 
-# Additional arguments will be passed 'as-is' to the 
-# downstream R function in this example, to ollama::chat() 
-llm_use("ollama", "llama3.2", seed = 100, temperature = 0.1) 
- 
-# During the R session, you can change any argument 
-# individually and it will retain all of previous 
-# arguments used 
-llm_use(temperature = 0.3) 
- 
-# Use .cache to modify the target folder for caching 
-llm_use(.cache = "_my_cache") 
- 
-# Leave .cache empty to turn off this functionality 
-llm_use(.cache = "") 
- 
-# Use .silent to avoid the print out 
-llm_use(.silent = TRUE) 
- 
+
+
+library(mall)
+
+llm_use("ollama", "llama3.2")
+
+# Additional arguments will be passed 'as-is' to the
+# downstream R function in this example, to ollama::chat()
+llm_use("ollama", "llama3.2", seed = 100, temperature = 0.1)
+
+# During the R session, you can change any argument
+# individually and it will retain all of previous
+# arguments used
+llm_use(temperature = 0.3)
+
+# Use .cache to modify the target folder for caching
+llm_use(.cache = "_my_cache")
+
+# Leave .cache empty to turn off this functionality
+llm_use(.cache = "")
+
+# Use .silent to avoid the print out
+llm_use(.silent = TRUE)
+
+# Use an `ellmer` object
+library(ellmer)
+chat <- chat_openai(model = "gpt-4o")
+llm_use(chat)
+
+
+
 ```
 
 
