--- a/index.qmd
+++ b/index.qmd
@@ -3,8 +3,8 @@ format:
   html:
     toc: true
 execute:
-  eval: false
-  freeze: false
+  eval: true
+  freeze: true
 ---
 
 ```{r}
@@ -134,8 +134,9 @@ pip install "mlverse-mall @ git+https://git@github.com/mlverse/mall.git#subdirec
 
 ### 2. Setup LLM integration
 
-::::: {.panel-tabset group="backends"}
-## Local LLM via Ollama
+Choose one of the two following options to setup LLM connectivity:
+
+#### a. Local LLM, via Ollama {#local-llms}
 
 -   [Download Ollama from the official website](https://ollama.com/download)
 
@@ -144,9 +145,11 @@ pip install "mlverse-mall @ git+https://git@github.com/mlverse/mall.git#subdirec
 ::: {.panel-tabset group="language"}
 ## R
 
--   Install Ollama in your machine. The `ollamar` package's website provides this [Installation guide](https://hauselin.github.io/ollama-r/#installation)
+-   Install Ollama in your machine. The `ollamar` package's website provides this 
+[Installation guide](https://hauselin.github.io/ollama-r/#installation)
 
--   Download an LLM model. For example, I have been developing this package using Llama 3.2 to test. To get that model you can run:
+-   Download an LLM model. For example, I have been developing this package using 
+Llama 3.2 to test. To get that model you can run:
 
     ``` r
     ollamar::pull("llama3.2")
@@ -160,7 +163,8 @@ pip install "mlverse-mall @ git+https://git@github.com/mlverse/mall.git#subdirec
     pip install ollama
     ```
 
--   Download an LLM model. For example, I have been developing this package using Llama 3.2 to test. To get that model you can run:
+-   Download an LLM model. For example, I have been developing this package
+using Llama 3.2 to test. To get that model you can run:
 
     ``` python
     import ollama
@@ -168,7 +172,7 @@ pip install "mlverse-mall @ git+https://git@github.com/mlverse/mall.git#subdirec
     ```
 :::
 
-## Remote LLMs
+#### b. Remote LLMs {#remote-llms}
 
 ::: {.panel-tabset group="language"}
 ## R
@@ -192,9 +196,23 @@ pip install "mlverse-mall @ git+https://git@github.com/mlverse/mall.git#subdirec
     llm_use(chat)
     ```
 
+**Set a default LLM for your R session**
+
+As a convenience, `mall` is able to automatically establish a connection with the
+LLM at the beginning o R session. To do this you can use the `.mall_chat` option:
+
+```r
+options(.mall_chat =  ellmer::chat_openai(model = "gpt-4o"))
+```
+
+Add this line to your *.Rprofile* file in order for that code to run every time
+you start R.  You can call `usethis::edit_r_profile()` to open your .Rprofile
+file so you can add the option. 
+
 ## Python
 
-`mall` uses the `chatlas` package as the integration point to the LLM. This package supports multiple providers such as OpenAI, Anthropic, Google Gemini, etc.
+`mall` uses the `chatlas` package as the integration point to the LLM. This 
+package supports multiple providers such as OpenAI, Anthropic, Google Gemini, etc.
 
 -   Install the `chatlas` library
 
@@ -202,9 +220,11 @@ pip install "mlverse-mall @ git+https://git@github.com/mlverse/mall.git#subdirec
     pip install chatlas
     ```
 
--   Refer to `chatlas`'s documentation to find out how to setup the connections with your selected provider: <https://posit-dev.github.io/chatlas/reference/#chat-model-providers>
+-   Refer to `chatlas`'s documentation to find out how to setup the connections
+with your selected provider: <https://posit-dev.github.io/chatlas/reference/#chat-model-providers>
 
--   Let `mall` know which `chatlas` object to use during the Python session. To do this, call `llm_use()`. Here is an example of using OpenAI:
+-   Let `mall` know which `chatlas` object to use during the Python session. 
+To do this, call `llm_use()`. Here is an example of using OpenAI:
 
     ``` python
     import mall
@@ -218,11 +238,11 @@ pip install "mlverse-mall @ git+https://git@github.com/mlverse/mall.git#subdirec
     reviews.llm.use(chat)
     ```
 :::
-:::::
 
 ## LLM functions
 
-We will start with loading a very small data set contained in `mall`. It has 3 product reviews that we will use as the source of our examples.
+We will start with loading a very small data set contained in `mall`. It has 
+3 product reviews that we will use as the source of our examples.
 
 ::: {.panel-tabset group="language"}
 ## R
@@ -289,7 +309,9 @@ For more information and examples visit this function's [Python reference page](
 
 ### Summarize {#summarize}
 
-There may be a need to reduce the number of words in a given text. Typically to make it easier to understand its intent. The function has an argument to control the maximum number of words to output (`max_words`):
+There may be a need to reduce the number of words in a given text. Typically to 
+make it easier to understand its intent. The function has an argument to control 
+the maximum number of words to output (`max_words`):
 
 ::: {.panel-tabset group="language"}
 ## R
@@ -335,7 +357,11 @@ For more information and examples visit this function's [Python reference page](
 
 ### Extract {#extract}
 
-One of the most interesting use cases Using natural language, we can tell the LLM to return a specific part of the text. In the following example, we request that the LLM return the product being referred to. We do this by simply saying "product". The LLM understands what we *mean* by that word, and looks for that in the text.
+One of the most interesting use cases Using natural language, we can tell the 
+LLM to return a specific part of the text. In the following example, we request 
+that the LLM return the product being referred to. We do this by simply saying 
+"product". The LLM understands what we *mean* by that word, and looks for that 
+in the text.
 
 ::: {.panel-tabset group="language"}
 ## R
@@ -358,7 +384,9 @@ For more information and examples visit this function's [Python reference page](
 
 ### Verify {#verify}
 
-This functions allows you to check and see if a statement is true, based on the provided text. By default, it will return a 1 for "yes", and 0 for "no". This can be customized.
+This functions allows you to check and see if a statement is true, based on the
+provided text. By default, it will return a 1 for "yes", and 0 for "no". This 
+can be customized.
 
 ::: {.panel-tabset group="language"}
 ## R
@@ -381,7 +409,10 @@ For more information and examples visit this function's [Python reference page](
 
 ### Translate {#translate}
 
-As the title implies, this function will translate the text into a specified language. What is really nice, it is that you don't need to specify the language of the source text. Only the target language needs to be defined. The translation accuracy will depend on the LLM
+As the title implies, this function will translate the text into a specified 
+language. What is really nice, it is that you don't need to specify the language
+of the source text. Only the target language needs to be defined. The 
+translation accuracy will depend on the LLM
 
 ::: {.panel-tabset group="language"}
 ## R
@@ -404,7 +435,8 @@ For more information and examples visit this function's [Python reference page](
 
 ### Custom prompt {#custom-prompt}
 
-It is possible to pass your own prompt to the LLM, and have `mall` run it against each text entry:
+It is possible to pass your own prompt to the LLM, and have `mall` run it 
+against each text entry:
 
 ::: {.panel-tabset group="language"}
 ## R
@@ -441,14 +473,21 @@ For more information and examples visit this function's [Python reference page](
 
 ## Model selection and settings
 
-You can set the model and its options to use when calling the LLM. In this case, we refer to options as model specific things that can be set, such as seed or temperature.
+You can set the model and its options to use when calling the LLM. In this case,
+we refer to options as model specific things that can be set, such as seed or 
+temperature.
 
 ::: {.panel-tabset group="language"}
 ## R
 
-Invoking an `llm` function will automatically initialize a model selection if you don't have one selected yet. If there is only one option, it will pre-select it for you. If there are more than one available models, then `mall` will present you as menu selection so you can select which model you wish to use.
+Invoking an `llm` function will automatically initialize a model selection if 
+you don't have one selected yet. If there is only one option, it will pre-select
+it for you. If there are more than one available models, then `mall` will 
+present you as menu selection so you can select which model you wish to use.
 
-Calling `llm_use()` directly will let you specify the model and backend to use. You can also setup additional arguments that will be passed down to the function that actually runs the prediction. In the case of Ollama, that function is [`chat()`](https://hauselin.github.io/ollama-r/reference/chat.html).
+Calling `llm_use()` directly will let you specify the model and backend to use.
+You can also setup additional arguments that will be passed down to the function
+that actually runs the prediction. In the case of Ollama, that function is [`chat()`](https://hauselin.github.io/ollama-r/reference/chat.html).
 
 The model to use, and other options can be set for the current R session
 
@@ -459,7 +498,8 @@ llm_use("ollama", "llama3.2", seed = 100, temperature = 0)
 
 ## Python
 
-The model and options to be used will be defined at the Polars data frame object level. If not passed, the default model will be **llama3.2**.
+The model and options to be used will be defined at the Polars data frame object 
+level. If not passed, the default model will be **llama3.2**.
 
 ```{python}
 #| eval: false
@@ -469,7 +509,10 @@ reviews.llm.use("ollama", "llama3.2", options = dict(seed = 100))
 
 #### Results caching
 
-By default `mall` caches the requests and corresponding results from a given LLM run. Each response is saved as individual JSON files. By default, the folder name is `_mall_cache`. The folder name can be customized, if needed. Also, the caching can be turned off by setting the argument to empty (`""`).
+By default `mall` caches the requests and corresponding results from a given 
+LLM run. Each response is saved as individual JSON files. By default, the folder
+name is `_mall_cache`. The folder name can be customized, if needed. Also, the
+caching can be turned off by setting the argument to empty (`""`).
 
 ::: {.panel-tabset group="language"}
 ## R
@@ -507,15 +550,28 @@ For more information see the [Caching Results](articles/caching.qmd) article.
 
 The main consideration is **cost**. Either, time cost, or money cost.
 
-If using this method with an LLM locally available, the cost will be a long running time. Unless using a very specialized LLM, a given LLM is a general model. It was fitted using a vast amount of data. So determining a response for each row, takes longer than if using a manually created NLP model. The default model used in Ollama is [Llama 3.2](https://ollama.com/library/llama3.2), which was fitted using 3B parameters.
+If using this method with an LLM locally available, the cost will be a long 
+running time. Unless using a very specialized LLM, a given LLM is a general 
+model. It was fitted using a vast amount of data. So determining a response for
+each row, takes longer than if using a manually created NLP model. The default
+model used in Ollama is [Llama 3.2](https://ollama.com/library/llama3.2), which 
+was fitted using 3B parameters.
 
-If using an external LLM service, the consideration will need to be for the billing costs of using such service. Keep in mind that you will be sending a lot of data to be evaluated.
+If using an external LLM service, the consideration will need to be for the 
+billing costs of using such service. Keep in mind that you will be sending a 
+lot of data to be evaluated.
 
-Another consideration is the novelty of this approach. Early tests are providing encouraging results. But you, as an user, will still need to keep in mind that the predictions will not be infallible, so always check the output. At this time, I think the best use for this method, is for a quick analysis.
+Another consideration is the novelty of this approach. Early tests are providing
+encouraging results. But you, as an user, will still need to keep in mind that 
+the predictions will not be infallible, so always check the output. At this time,
+I think the best use for this method, is for a quick analysis.
 
 ## Vector functions (R only)
 
-`mall` includes functions that expect a vector, instead of a table, to run the predictions. This should make it easier to test things, such as custom prompts or results of specific text. Each `llm_` function has a corresponding `llm_vec_` function:
+`mall` includes functions that expect a vector, instead of a table, to run the
+predictions. This should make it easier to test things, such as custom prompts
+or results of specific text. Each `llm_` function has a corresponding `llm_vec_`
+function:
 
 ```{r}
 llm_vec_sentiment("I am happy")
