Renames to LLMVec, updates docs and index

--- a/index.qmd
+++ b/index.qmd
@@ -16,6 +16,8 @@ library(dbplyr)
 library(tictoc)
 library(DBI)
 source("site/knitr-print.R")
+
+reticulate::use_virtualenv("python/.venv")
 ```
 
 ```{python}
@@ -276,11 +278,6 @@ reviews = data.reviews
 reviews 
 ```
 :::
-
-```{python}
-#| include: false
-reviews.llm.use(options = dict(seed = 100), _cache = "_readme_cache")
-```
 
 ### Sentiment {#sentiment}
 
@@ -620,7 +617,7 @@ llm_vec_translate("Este es el mejor dia!", "english")
 
 `mall` is also able to process vectors contained in a `list` object. This allows
 us to avoid having to convert a list of texts without having to first convert
-them into a single column data frame. To use, initialize a new `LlmVec` class
+them into a single column data frame. To use, initialize a new `LLMVec` class
 object with either an Ollama model, or a `chatlas` `Chat` object, and then
 access the same NLP functions as the Polars extension.
 
@@ -629,12 +626,12 @@ access the same NLP functions as the Polars extension.
 from chatlas import ChatOllama
 chat = ChatOllama(model = "llama3.2")
 
-# Pass it to a new LlmVec
-from mall import LlmVec
-llm = LlmVec(chat)    
+# Pass it to a new LLMVec
+from mall import LLMVec
+llm = LLMVec(chat)    
 ```
 
-Access the functions via the new LlmVec object, and pass the text to be processed.
+Access the functions via the new LLMVec object, and pass the text to be processed.
 
 ```{python}
 llm.sentiment(["I am happy", "I am sad"])
