--- a/reference/index.qmd
+++ b/reference/index.qmd
@@ -26,20 +26,20 @@ an LLM to run batch predictions over a data frame
 
 <br/><br/>
 
-### LlmVec
+### LLMVec
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Class that adds ability to use an LLM 
 to run batch predictions
 
 | Name | Description |
 | --- | --- |
-| [classify](LlmVec.qmd#mall.LlmVec.classify) | Classify text into specific categories. |
-| [custom](LlmVec.qmd#mall.LlmVec.custom) | Provide the full prompt that the LLM will process. |
-| [extract](LlmVec.qmd#mall.LlmVec.extract) | Pull a specific label from the text. |
-| [sentiment](LlmVec.qmd#mall.LlmVec.sentiment) | Use an LLM to run a sentiment analysis |
-| [summarize](LlmVec.qmd#mall.LlmVec.summarize) | Summarize the text down to a specific number of words. |
-| [translate](LlmVec.qmd#mall.LlmVec.translate) | Translate text into another language. |
-| [verify](LlmVec.qmd#mall.LlmVec.verify) | Check to see if something is true about the text. |
+| [classify](LLMVec.qmd#mall.LLMVec.classify) | Classify text into specific categories. |
+| [custom](LLMVec.qmd#mall.LLMVec.custom) | Provide the full prompt that the LLM will process. |
+| [extract](LLMVec.qmd#mall.LLMVec.extract) | Pull a specific label from the text. |
+| [sentiment](LLMVec.qmd#mall.LLMVec.sentiment) | Use an LLM to run a sentiment analysis |
+| [summarize](LLMVec.qmd#mall.LLMVec.summarize) | Summarize the text down to a specific number of words. |
+| [translate](LLMVec.qmd#mall.LLMVec.translate) | Translate text into another language. |
+| [verify](LLMVec.qmd#mall.LLMVec.verify) | Check to see if something is true about the text. |
 
 :::
   
